<resources>
    <string name="app_name">S&amp;F App</string>
    <string name="s_f_app"><![CDATA[S&F APP]]></string>
    <string name="ingresa_tu_numero_de_documento">Ingresa tu numero de documento</string>
    <string name="introduce_tu_contrase_a">Introduce tu contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="deseas_registrar_una_cuenta"><u>¿Deseas registrar una cuenta?</u></string>
    <string name="title_activity_home2">HomeActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Open"></string>
    <string name="Close"></string>
    <string name="cancelar">Cancelar</string>
    <string name="nombre_trabajador">Nombre trabajador</string>
    <string name="apellido_trabajador">Apellido trabajador</string>
    <string name="tgrfccrtgced">tgrfccrtgced</string>
    <string name="selecciona_un_tipo_de_documento">Selecciona un tipo de documento</string>
    <string name="agregar">Agregar</string>
    <string name="agregar_nomina">Agregar Nomina</string>
    <string name="salario_trabajador">Salario trabajador</string>
    <string name="telefono_trabajor">Telefono trabajor</string>
</resources>
